Fix alignment  & cursor issues

--- a/css/base.scss
+++ b/css/base.scss
@@ -3,18 +3,14 @@
 @import "./pages/index";
 @import "./pages/description_page";
 
+
 body {
 	background-color: $dark-bg;
 	font-family: 'Inconsolata', sans-serif;
+	margin: 8px 0;
 }
 
-@media only screen and (min-width:1200px) {
-	body {
-		width: 1100px;
-		margin: 1em auto;
-	}
 
-}
 
 h1 {
 	font-size: 2.5rem;
