--- a/css/pages/_description_page.scss
+++ b/css/pages/_description_page.scss
@@ -1,3 +1,12 @@
+
+@media only screen and (min-width:1200px) {
+	.description-wrapper {
+		width: 1100px;
+		margin: 1em auto;
+	}
+
+}
+
 .project-description {
 
 	display: flex;
