--- a/css/pages/_index.scss
+++ b/css/pages/_index.scss
@@ -2,6 +2,23 @@ main {
 	margin-top: 7.4em;
 }
 
+body {
+	.index-wrapper {
+		margin: 1em 3em;
+	}
+}
+
+@media only screen and (min-width:1200px) {
+	body {
+
+		.index-wrapper {
+			width: 1100px;
+			margin: 1em auto;
+		}
+	}
+
+}
+
 
 .intro-section {
 	margin-bottom: 7.4em;
@@ -207,6 +224,9 @@ section.works-section {
 				height: 100%;
 				z-index: 2;
 				background-color: $overlay-bg;
+				cursor: pointer;
+
+
 
 				a {
 					text-decoration: none;
